# CIEF

./: README.md
.github/workflows/: main.yml
cief/: Makefile  pyproject.toml
cief/cief/: __init__.py  cief.py  tree.py  types.py  utils.py  walk.py
cief/cief/scorer/: __init__.py  base_scorer.py  python_score_functions.py
cief/cief/splitter/: __init__.py  python_splitter.py
cief/cief/steptree/: __init__.py  base_step_tree.py  non_recursion_tree.py  recursion_tree.py
cief/example/: example.py
cief/tests/: test_cief.py
experimentation/: Makefile  README.md  pyproject.toml
experimentation/R_scripts/: common.R  explore.R  results.R  run.R  traces.R
experimentation/experimentation/: __init__.py  cli.py  dataset.py  experiment.py  naive_estimator.py  run_experiments.py  specifications.py
experimentation/tests/: test_experiment.py  test_naive_estimator.py
