[tool.poetry]
name = "cief"
version = "1.0.1"
description = ""
authors = ["Stefan B. R. <smj572@alumni.ku.dk>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
networkx = "^2.6.3"
pydot = "^1.4.2"
seaborn = "^0.11.2"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ipython = "^7.29.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

